[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/WeaponManager.gd" type="Script" id=2]
[ext_resource path="res://scenes/HitScanBulletSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Weapon.gd" type="Script" id=4]
[ext_resource path="res://scenes/HealthManager.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 2.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.0235294, 0.643137, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="CapsuleShape" id=4]
height = 2.0

[sub_resource type="SphereMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0, 0, 1 )

[node name="Player" type="KinematicBody"]
collision_layer = 6
collision_mask = 3
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="WeaponManager" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Weapons" type="Spatial" parent="WeaponManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.24315, 0 )

[node name="MachineGun" type="Spatial" parent="WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, -1 )
script = ExtResource( 4 )
automatic_fire = true

[node name="MachineGunGraphics" type="MeshInstance" parent="WeaponManager/Weapons/MachineGun"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="BulletSpawners" type="Spatial" parent="WeaponManager/Weapons/MachineGun"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, 0 )

[node name="HitScanBulletSpawner" parent="WeaponManager/Weapons/MachineGun/BulletSpawners" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 2.84217e-14, 0, 1, 0, -2.84217e-14, 0, 1, 3.26697e-07, 0, 1.00262 )

[node name="FirePoint" type="Spatial" parent="WeaponManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.660659, -0.761873 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 4 )

[node name="CameraRig" type="Position3D" parent="."]

[node name="Camera" type="Camera" parent="CameraRig"]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -10, 17.5, 10 )

[node name="Cursor" type="MeshInstance" parent="."]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Firepoint" type="Spatial" parent="Cursor"]
transform = Transform( 0.666666, 0, 0, 0, 0.666666, 0, 0, 0, 3.33333, 0, 2.0289, 0 )

[node name="HealthManager" parent="." instance=ExtResource( 5 )]
